<?xml version="1.0" encoding="utf-8"?>
<!-- 关于页面 AboutActivity 布局 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_about_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_about_bg" >

    <!-- 图片信息 -->

    <ImageView
        android:id="@+id/activity_about_layout_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/activity_about_layout_imageview" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_about_layout_imageview"
        android:layout_marginTop="20dp"
        android:fadingEdge="vertical"
        android:scrollbars="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/activity_about_layout_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="#000000"
                android:text="@string/string_activity_about_layout_intro"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/activity_about_layout_web_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/activity_about_layout_intro"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:textStyle="bold"
                android:text="@string/string_activity_about_layout_web_name"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/string_activity_about_layout_web_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/activity_about_layout_web_name"
                android:layout_below="@id/activity_about_layout_intro"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/activity_about_layout_web_name"
                android:autoLink="web"
                android:gravity="center_vertical"
                android:textColorLink="@color/link_color"
                android:text="@string/string_activity_about_layout_web_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/activity_about_layout_phone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/activity_about_layout_web_name"
                android:paddingTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textStyle="bold"
                android:text="@string/string_activity_about_layout_phone_name"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/activity_about_layout_phone_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/activity_about_layout_phone_name"
                android:layout_below="@id/activity_about_layout_web_name"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/activity_about_layout_phone_name"
                android:gravity="center_vertical"
                android:text="@string/string_activity_about_layout_phone_content"
                android:textSize="16sp" />
        </RelativeLayout>
    </ScrollView>
    <!-- 简介 -->

</RelativeLayout>