<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_about_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/detail_imageview_border"
                android:src="@drawable/shop_logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/activity_detail_layout_shop_name"
                    android:tag="activity_detail_layout_shop_name_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="万科集团"
                    android:textColor="@color/shop_detail_title_color"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="让建筑赞美生命" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1234123123123"
                    android:textColor="@color/shop_detail_title_color" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shop_link" />

        <com.palmap.main.view.ScrollViewExtend
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="20dp" >

                <android.support.v4.view.ViewPager
                    android:id="@+id/activity_detail_layout_pager"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:tag="pager_tag" />

                <com.palmap.main.view.CirclePageIndicator
                    android:id="@+id/activity_detail_layout_indicator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/activity_detail_layout_pager"
                    android:padding="10dip"
                    android:tag="indicator_tag"
                    app:fillColor="@android:color/black"
                    app:pageColor="@android:color/white"
                    app:strokeColor="@android:color/transparent" />

                <TextView
                    android:id="@+id/activity_detail_layout_shop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_detail_layout_indicator"
                    android:text="店铺介绍:"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/activity_detail_layout_shop_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/activity_detail_layout_shop_name"
                    android:text="@string/string_activity_about_layout_intro"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/activity_detail_layout_web_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/activity_detail_layout_shop_intro"
                    android:paddingRight="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/string_activity_about_layout_web_name"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_detail_layout_web_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/activity_detail_layout_web_name"
                    android:layout_below="@id/activity_detail_layout_shop_intro"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/activity_detail_layout_web_name"
                    android:autoLink="web"
                    android:gravity="center_vertical"
                    android:text="@string/string_activity_about_layout_web_content"
                    android:textColorLink="@color/link_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/activity_detail_layout_phone_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/activity_detail_layout_web_name"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/string_activity_about_layout_phone_name"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_detail_layout_phone_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/activity_detail_layout_phone_name"
                    android:layout_below="@id/activity_detail_layout_web_name"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/activity_detail_layout_phone_name"
                    android:gravity="center_vertical"
                    android:text="@string/string_activity_about_layout_phone_content"
                    android:textSize="16sp" />
            </RelativeLayout>
        </com.palmap.main.view.ScrollViewExtend>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/activity_home_title_layout_bg_bitmap"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/detail_button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/detail_home"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/detail_button_home_name"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <Button
            android:id="@+id/detail_button_location"
            android:tag="detail_button_location_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/detail_location"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/detail_button_location_name"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

        <Button
            android:id="@+id/detail_button_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#00000000"
            android:drawableTop="@drawable/detail_navigation"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/detail_button_navigation_name"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>